2008-04-09  Daniel Steffen  <das@users.sourceforge.net>

	* tests/chanio.test (chan-io-53.8,53.9,53.10):	fix typo & quoting for
	* tests/io.test (io-53.8,53.9,53.10):		spaces in builddir path

2008-04-08  Miguel Sofer  <msofer@users.sf.net>

	* generic/tclExecute.c: added comments to the alignment macros
	used in GrowEvaluationStack() and friends.
	
2008-04-08  Daniel Steffen  <das@users.sourceforge.net>

	* tools/genStubs.tcl:	revert erroneous 2008-04-02 change marking
				*StubsPtr as EXTERN instead of extern.

	* generic/tclDecls.h:		make genstubs
	* generic/tclIntDecls.h:
	* generic/tclIntPlatDecls.h:
	* generic/tclPlatDecls.h:
	* generic/tclTomMathDecls.h:

2008-04-07  Andreas Kupries  <andreask@activestate.com>

	* tests/io.test (io-53.10): Testcase for bi-directionaly fcopy.
	* tests/chanio.test:
	* generic/tclIO.c: Additional changes to data structures for fcopy
	* generic/tclIO.h: and channels to perform proper cleanup in case
	of a channel having two background copy operations running as is
	now possible.

	* generic/tclIO.c (BUSY_STATE, CheckChannelErrors,
	TclCopyChannel): New macro, and the places using it. This change
	allows for bi-directional fcopy on channels. [Bug 1350564]. Thanks
	to Alexandre Ferrieux <ferrieux@users.sourceforge.net> for the
	patch.

2008-04-07  Reinhard Max  <max@suse.de>

	* generic/tclStringObj.c (Tcl_AppendFormatToObj): Fix [format {% d}]
	so that it behaves the same way as in 8.4 and as C's printf().
	* tests/format.test: Add a test for '% d' and '%+d'.

2008-04-05  Kevin B. Kenny  <kennykb@acm.org>
	
	* win/tclWinFile.c: (WinSymLinkDirectory): Fixed a problem that
	Tcl was creating an NTFS junction point (IO_REPARSE_TAG_MOUNT_POINT)
	but filling in the union member for a Vista symbolic link.
	We had gotten away with this error because the union member
	(SymbolicLinkReparseBuffer) was misdefined in this file
	and in the 'winnt.h' in early versions of MinGW. MinGW 3.4.2