@@ -606,6 +606,12 @@ test iocmd-15.11 {Tcl_FcopyObjCmd} {fcopy} {
 test iocmd-15.12 {Tcl_FcopyObjCmd} {fcopy} {
     list [catch {fcopy $rfile $wfile -command bar -size foo} msg] $msg
 } {1 {expected integer but got "foo"}}
+test iocmd-15.13 {Tcl_FcopyObjCmd} {fcopy} {
+    list [catch {fcopy $rfile $wfile -command bar -size 3221176172} msg] $msg
+} {1 {integer value to large to represent as 32bit signed value}}
+test iocmd-15.14 {Tcl_FcopyObjCmd} {fcopy} {
+    list [catch {fcopy $rfile $wfile -command bar -size -2} msg] $msg
+} {1 {negative size forbidden}}
 
 close $rfile
 close $wfile
